@@ -35,7 +35,11 @@ if (!verify_php_extensions()) {exit;}
 
 $cacti_versions = array("0.8", "0.8.1", "0.8.2", "0.8.2a", "0.8.3", "0.8.3a", "0.8.4", "0.8.5", "0.8.5a", "0.8.6", "0.8.6a", "0.8.6b", "0.8.6c", "0.8.6d", "0.8.6e", "0.8.6f", "0.8.6g", "0.8.6h", "0.8.6i", "0.8.6j", "0.8.6k", "0.8.7", "0.8.7a", "0.8.7b", "0.8.7c", "0.8.7d", "0.8.7e", "0.8.8");
 
-$old_cacti_version = db_fetch_cell("select cacti from version");
+if(!$database_empty) {
+	$old_cacti_version = db_fetch_cell("select cacti from version");
+} else {
+	$old_cacti_version = "";
+}
 
 /* try to find current (old) version in the array */
 $old_version_index = array_search($old_cacti_version, $cacti_versions);
@@ -63,7 +67,7 @@ if ($old_cacti_version == CACTI_VERSION) {
 }
 
 function verify_php_extensions() {
-	$extensions = array("session", "sockets", "mysql", "xml");
+	$extensions = array("session", "sockets", "mysql", "xml", "pcre");
 	$ok = true;
 	$missing_extension = "	<p style='font-family: Verdana, Arial; font-size: 16px; font-weight: bold; color: red;'>Error</p>
 							<p style='font-family: Verdana, Arial; font-size: 12px;'>The following PHP extensions are missing:</p><ul>";
