@@ -2244,3 +2244,56 @@ function sanitize_search_string($string) {
 
 	return $string;
 }
+
+function early_environment_checks() {
+	$mem_allowed = ini_get("memory_limit");
+	$mem_allowed_int = return_bytes($mem_allowed);
+
+	// capture the PHP "General Info" table
+	ob_start();
+	phpinfo(INFO_GENERAL);
+	$s = ob_get_contents();
+	ob_end_clean();
+	foreach (explode("\n", $s) as $line) {
+		$line = str_replace('<tr><td class="e">','',$line);
+		$line = str_replace('</td></tr>','',$line);
+		$line = str_replace(' </td><td class="v">',' => ',$line);
+		$sep_pos = strpos($line," => ");
+		if ($sep_pos!==FALSE) {
+			// by here, it should be a straight "name => value"
+			$name = substr($line, 0, $sep_pos);
+			$value = substr($line, $sep_pos + 4);
+			$php_general[$name] = $value;
+		}
+	}
+
+	$ini_file = $php_general['Loaded Configuration File'];
+
+	if (($mem_allowed_int>0) && ($mem_allowed_int < 128000000))	{
+		die('memory_limit is '.$mem_allowed.' - You should increase this value to at least 128M in your php.ini ('.$ini_file.')');
+	}
+
+	if (!function_exists('mysql_data_seek')) {
+		die ("\n\nNo 'mysql' PHP extension is loaded. This is required by Cacti. Check your php.ini file ($ini_file).\n");
+	}
+}
+
+function return_bytes($val) {
+	$val = trim($val);
+	if ($val != '')	{
+		$last = strtolower($val{strlen($val) - 1});
+		switch($last) {
+			// The 'G' modifier is available since PHP 5.1.0
+			case 'g':
+				$val *= 1024;
+			case 'm':
+				$val *= 1024;
+			case 'k':
+				$val *= 1024;
+		}
+	} else {
+		$val = 0;
+	}
+
+    return $val;
+}
